deploy/slai-app-prod/demomonai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demomonai
  namespace: slai-app-prod
  labels:
    app.kubernetes.io/name: demomonai
    app.kubernetes.io/instance: demomonai
    app.kubernetes.io/managed-by: slai-app-platform
    hosted-by: slai-app-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demomonai
    app.kubernetes.io/instance: demomonai
  ports:
    - name: http
      port: 80
      targetPort: http
